--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,92 +1,27 @@
-#user  nobody;
-worker_processes  4;
+worker_processes 2;
 
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
+events { worker_connections 1024; }
 
-#pid        logs/nginx.pid;
+http {
 
-
-events {
-    worker_connections  1024;
-}
-
-
- http {
-    include       mime.types;
-    default_type  application/octet-stream;
-    sendfile        on;
-    keepalive_timeout  65;
-
-
-    gzip  on;
-    gzip_disable msie6;
-    #gzip_static on;
-    gzip_comp_level 4;
-    gzip_proxied any;
-    gzip_types  text/plain
-                text/css
-                application/x-javascript
-                text/xml
-                application/xml
-                application/xml+rss
-                text/javascript;
-
-    upstream blog-webserver {
-        server wordpress.devinfra:443;
-    }
- 
-    # redirect http to https
-    # http://serverfault.com/a/171238
-    server {
-        listen 80;
-        rewrite ^(.*) https://$host$1 permanent;
-    }
- 
-    server {
-        listen *:443;
- 
-        ssl on;
-        ssl_certificate           /etc/nginx/blog.albert.es.crt;
-        ssl_certificate_key       /etc/nginx/blog.albert.es.key; 
-        #ssl_client_certificate /etc/nginx/crypto/ca.crt;
-        #ssl_verify_client optional;
-        #ssl_verify_depth 10;
-        ssl_session_cache    shared:SSL:1m;
-        ssl_session_timeout  10m;
-        #ssl_certificate /etc/nginx/ssl/example.com.crt;
-        #ssl_certificate_key /etc/nginx/ssl/example.com.key;
-        ssl_verify_client off;
-        ssl_protocols        TLSv1 TLSv1.1 TLSv1.2;
-        ssl_ciphers RC4:HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
-        proxy_ssl_session_reuse off;
- 
-        server_name blog.albert.es;
-        access_log  /var/log/nginx/https_service_access.log;
-        error_log   /var/log/nginx/ssl.error.log;
-        error_page  404 /404.html;
-
-        # reverse proxy to blog web servers
-        location / { 
-            proxy_pass https://blog-webserver/;
-            #proxy_redirect https://blog.albert.es http://blog-webserver/;
-     
-            proxy_read_timeout       3500;
-            proxy_connect_timeout    3250;
- 
-            proxy_set_header   X-Real-IP          $remote_addr;
-            proxy_set_header   Host               $host;
-            proxy_set_header   X-Forwarded-For    $proxy_add_x_forwarded_for;
-            proxy_set_header   X-Forwarded-Proto  https;
-        
-  
-            proxy_set_header   SSL_PROTOCOL $ssl_protocol;
-            proxy_set_header   SSL_CLIENT_CERT $ssl_client_cert;
-            proxy_set_header   SSL_CLIENT_VERIFY $ssl_client_verify;
-            proxy_set_header   SSL_SERVER_S_DN $ssl_client_s_dn;
+        upstream node-app {
+              least_conn;
+              server node1.back:3000 weight=10 max_fails=3 fail_timeout=30s;
+              server node2.back:3000 weight=10 max_fails=3 fail_timeout=30s;
+              server node3.back:3000 weight=10 max_fails=3 fail_timeout=30s;
         }
-    }
+         
+        server {
+              listen 80;
+         
+              location / {
+                proxy_pass http://node-app;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection 'upgrade';
+                proxy_set_header Host $host;
+                proxy_cache_bypass $http_upgrade;
+              }
+        }
 }
 
