--- a/deb-strongloop/Dockerfile
+++ b/deb-strongloop/Dockerfile
@@ -1,5 +1,6 @@
+# FROM 192.168.1.102/library/aarch64-debian:jessie
 FROM aarch64/debian:jessie
-MAINTAINER Albert Domenech (adomenech@gmail.com)
+MAINTAINER Albert Domenech <adomenech@gmail.com>
 ENV \
 	DEBIAN_FRONTEND=noninteractive \ 
 	TERM=xterm-color \
