staticaly compiled cadvisor

--- a/alp-cadvisor/Dockerfile
+++ b/alp-cadvisor/Dockerfile
@@ -1,15 +1,9 @@
-FROM 192.168.1.102/library/aarch64-alpine:edge
-MAINTAINER dengnan@google.com vmarmol@google.com vishnuk@google.com jimmidyson@gmail.com stclair@google.com
+#FROM 192.168.1.102/library/aarch64-alpine:edge
+aarch64/alpine:edge
+MAINTAINER Albert Domenech <adomenech@gmail.com>
 
-ENV GLIBC_VERSION "2.23-r3"
-
-RUN apk --no-cache add ca-certificates wget device-mapper && \
+RUN apk --no-cache add ca-certificates device-mapper && \
     apk --no-cache add zfs --repository http://dl-3.alpinelinux.org/alpine/edge/main/ && \
-    wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://raw.githubusercontent.com/sgerrand/alpine-pkg-glibc/master/sgerrand.rsa.pub && \
-    wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/${GLIBC_VERSION}/glibc-${GLIBC_VERSION}.apk && \
-    wget https://github.com/andyshinn/alpine-pkg-glibc/releases/download/${GLIBC_VERSION}/glibc-bin-${GLIBC_VERSION}.apk && \
-    apk add glibc-${GLIBC_VERSION}.apk glibc-bin-${GLIBC_VERSION}.apk && \
-    /usr/glibc-compat/sbin/ldconfig /lib /usr/glibc-compat/lib && \
     echo 'hosts: files mdns4_minimal [NOTFOUND=return] dns mdns4' >> /etc/nsswitch.conf && \
     rm -rf /var/cache/apk/*
 
