--- a/alp-consul/Dockerfile
+++ b/alp-consul/Dockerfile
@@ -2,15 +2,16 @@ FROM aarch64/alpine:edge
 
 MAINTAINER Albert Domenech <adomenech@gmail.com>
 
+# Add binaries
 ADD consul /bin/consul
-
-RUN apk add --no-cache ca-certificates gosu && \
-    chmod a+x /bin/consul
+ADD dumb-init /bin/dumb-init
 
 # Create a consul user and group first so the IDs get set the same way, even as
 # the rest of this may change over time.
-RUN addgroup consul && \
-    adduser -S -G consul consul
+RUN addgroup consul \
+    && adduser -S -G consul consul \
+    && chmod +x /bin/consul \
+    && chmod +x /bin/dumb-init
 
 # The /consul/data dir is used by Consul to store state. The agent will be started
 # with /consul/config as the configuration directory so you can add additional
@@ -18,6 +19,19 @@ RUN addgroup consul && \
 RUN mkdir -p /consul/data && \
     mkdir -p /consul/config && \
     chown -R consul:consul /consul
+
+# Install gosu
+ENV GOSU_VERSION 1.9
+RUN set -x \
+    && apk add --no-cache --virtual .gosu-deps \
+        dpkg \
+        gnupg \
+        openssl \
+    && dpkgArch="$(dpkg --print-architecture | awk -F- '{ print $NF }')" \
+    && wget -O /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-$dpkgArch" \
+    && chmod +x /usr/local/bin/gosu \
+    && gosu nobody true \
+    && apk del .gosu-deps
 
 # Expose the consul data directory as a volume since there's mutable state in there.
 VOLUME /consul/data
@@ -38,11 +52,14 @@ EXPOSE 8400 8500 8600 8600/udp
 # Consul doesn't need root privileges so we run it as the consul user from the
 # entry point script. The entry point script also uses dumb-init as the top-level
 # process to reap any zombie processes created by Consul sub-processes.
-COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
-ENTRYPOINT ["docker-entrypoint.sh"]
+COPY docker-entrypoint.sh /docker-entrypoint.sh
+
+ENTRYPOINT ["/docker-entrypoint.sh"]
 
 # By default you'll get an insecure single-node development server that stores
 # everything in RAM, exposes a web UI and HTTP endpoints, and bootstraps itself.
 # Don't use this configuration for production.
-#CMD ["server", "127.0.0.1"]
-CMD ["agent", "-dev", "-client", "0.0.0.0"]
+#
+#CMD ["agent", "-dev", "-server"]
+#CMD ["agent", "-dev", "-client", "0.0.0.0"]
+#CMD ["/bin/ash"]
